test/parallel/taskPar/vass/taskintents-inout-error.good
taskintents-inout-error.chpl:3: syntax error: 'inout' intent is not supported in a 'with' clause
